# ID3-C4.5

./: .gitignore  README.md  REPORT_STRUCTURE.md  commit_generator.py  comparative_study.py  pyproject.toml  tree_output.txt
examples/: demo_c45.py  demo_id3.py  showcase.py
outputs/: model.json  tree.dot  tree_c45.dot
src/decision_trees/: __init__.py  base.py  callbacks.py  importance.py  metrics.py  optimized.py  serialization.py  tuning.py
src/decision_trees.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/decision_trees/benchmarks/: __init__.py
src/decision_trees/c45/: __init__.py
src/decision_trees/c45/core/: __init__.py  gain_ratio.py  node.py  pruning.py  tree.py
src/decision_trees/c45/data/: __init__.py  loader.py
src/decision_trees/c45/utils/: __init__.py  visualization.py
src/decision_trees/ensemble/: __init__.py  adaboost.py  gradient_boosting.py  random_forest.py
src/decision_trees/id3/: __init__.py
src/decision_trees/id3/comparison/: __init__.py  sklearn_compare.py
src/decision_trees/id3/core/: __init__.py  entropy.py  node.py  tree.py
src/decision_trees/id3/data/: __init__.py  loader.py  preprocessing.py
src/decision_trees/id3/utils/: __init__.py  validation.py  visualization.py
tests/: test_c45.py  test_ensemble.py  test_id3.py  test_patterns.py
